--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dr. A. P. J. Abdul Kalam</title>
-    <meta name="description" content="Tribute to Dr. A.P.J. Abdul Kalam - India's Missile Man and 11th President.">
-    <meta name="keywords" content="Abdul Kalam, Missile Man, President of India, Bharat Ratna, Indian Scientist">
-    <meta name="author" content="Anmol">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <hr>
-    <h1>The Great Scientist Dr. A. P. J. Abdul Kalam</h1>
-    <hr><br>
+<html>
+    <head>
+        <meta name="author" content="Anmol Salhotra">
+        <title>Cristiano Ronaldo</title>
+    </head>
+    <body>
+        <section id="about-us">
+            <h2>About Us</h2>
+            <b>This website is dedicated to providing information about Cristiano Ronaldo, one of the greatest footballers of all time.</b>
+            <p>Author: Anmol Salhotra</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Real_Madrid_vs._Atl%C3%A9tico_Madrid_28_September_2013_a_%28cropped%29.JPG/340px-Real_Madrid_vs._Atl%C3%A9tico_Madrid_28_September_2013_a_%28cropped%29.JPG" width="70%" height="50%">
+        </section>
+        <h1 id="Cristiano Ronaldo"><b>Who is Cristiano Ronaldo?</b></h1>
+        <button><a href="#Sporting lisabon">Ronaldo in Sporting lisabon</a></button>
+        <button><a href="#Real Madrid">Ronaldo in Real Madrid</a></button>
+        <button><a href="#Juventus">Ronaldo in Juventus</a></button>
+        <button><a href="#Return of the Goat">Return of the Goat</a></button>
+        <button><a href="#Al Nassr">Ronaldo in Al Nassr</a></button>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8b/Cristiano_Ronaldo_WC2022_-_01_%28cropped%29.jpg" width="70%" height="50%">
+        <h2>Full Name:<i>Ronaldo dos Santos Aveiro</i></h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Cristiano_Ronaldo_Signature.svg/440px-Cristiano_Ronaldo_Signature.svg.png" width="75%" height="50%">
+        <p>Cristiano is born 5 February 1985 and is a Portuguese professional footballer who plays as a forward for and captains both Saudi Professional League club Al Nassr and the Portugal national team</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Goat_-_Colchester_Zoo.jpg/360px-Goat_-_Colchester_Zoo.jpg" width="70%" height="50%">
+        <h3>Widely regarded as one of the greatest players of all time</h3>
+        <p>Ronaldo has won five Ballon d'Or awards and four European Golden Shoes, the most by a European player. He has won 32 trophies in his career, including seven league titles, five UEFA Champions Leagues, the UEFA European Championship and the UEFA Nations League. Ronaldo holds the records for most appearances (183), goals (140) and assists (42) in the Champions League, goals in the European Championship (14), international goals (123) and international appearances (200). He is one of the few players to have made over 1,100 professional career appearances, and has scored over 800 official senior career goals for club and country, making him the highest goalscorer of all time.</p>
 
-    <b class="main-text">
-        A.P.J. Abdul Kalam was the greatest scientist. His full name is <mark>Avul Pakir Jainulabdeen Abdul Kalam.</mark><br><br>
-        Avul Pakir Jainulabdeen Abdul Kalam (15 October 1931 – 27 July 2015) was an Indian aerospace scientist and politician who served as the 11th President of India from 2002 to 2007. He was born and raised in <mark>Rameswaram, Tamil Nadu</mark> and studied physics and aerospace engineering. He worked with <span class="red-bold">DRDO</span> and <span class="red-bold">ISRO</span>, contributing to missile development.
-    </b><br><br>
+        <h2 id="Sporting lisabon">Sporting lisabon</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Ronaldo_-_Manchester_United_vs_Chelsea.jpg/440px-Ronaldo_-_Manchester_United_vs_Chelsea.jpg" width="70%" height="50%">
+        <p>Ronaldo began his senior career with Sporting CP, before signing with Manchester United in 2003, winning the FA Cup in his first season. He would also go on to win three consecutive Premier League titles, the Champions League and the FIFA Club World Cup; at age 23, he won his first Ballon d'Or.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/C.Ronaldo_at_Museum_Mundo_Sporting.JPG/440px-C.Ronaldo_at_Museum_Mundo_Sporting.JPG" width="70%" height="50%">
 
-    <h3>[1]</h3>
-    Known as the <mark>Missile Man</mark> of India for his work on ballistic missiles and launch vehicles. Played a key role in <mark>India's Pokhran-II nuclear tests</mark> in 1998.
+        <h2 id="Real Madrid">Real Madrid</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Gran_foto_de_Cristiano_%284263510607%29.jpg/340px-Gran_foto_de_Cristiano_%284263510607%29.jpg" width="70%" height="50%">
+        <p>Ronaldo was the subject of the then-most expensive association football transfer when he signed for Real Madrid in 2009 in a transfer worth €94 million (£80 million). He became a key contributor and formed an attacking trio with Karim Benzema and Gareth Bale which was integral to the team winning four Champions League wins from 2014 to 2018, including La Décima. During this period, he won back-to-back Ballons d'Or in 2013 and 2014, and again in 2016 and 2017, and was runner-up three times behind Lionel Messi, his perceived career rival. He also became the club's all-time top goalscorer and the all-time top scorer in the Champions League, and finished as the competition's top scorer for six consecutive seasons between 2012 and 2018. With Real, Ronaldo won four Champions Leagues, two La Liga titles, two Copas del Rey, three UEFA Super Cups and three Club World Cups.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Cristiano_Ronaldo_2012_Espanyol.jpg/440px-Cristiano_Ronaldo_2012_Espanyol.jpg" width="70%" height="50%">
 
-    <h3>[2]</h3>
-    Elected as the 11th President of India in 2002. Called the "People’s President". Won awards including <mark>Bharat Ratna</mark>.
+        <h2 id="Juventus">Juventus</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Cristiano-ronaldo-juventus-2019_%28cropped%29.jpg/340px-Cristiano-ronaldo-juventus-2019_%28cropped%29.jpg" width="70%" height="50%">
+        <p>Despite months of negotiation to sign a new Real Madrid contract,on 10 July 2018, Ronaldo signed a four-year contract with Italian club Juventus after completing a €100 million transfer, which included an additional €12 million in other fees and solidarity contributions to Ronaldo's youth clubs.The transfer was the highest ever for a player over 30 years oldand the highest paid by an Italian club.The transfer was the highest ever for a player over 30 years oldand the highest paid by an Italian club.</p>
 
-    <h3>[3]</h3>
-    Passed away on <mark>27 July 2015</mark> while giving a lecture. Buried in Rameswaram with state honors.
+        <h2 id="Return of the Goat">Return of the Goat</h2>
+        <p>On 27 August 2021, Manchester United announced they had reached an agreement with Juventus to re-sign Ronaldo, subject to agreement of personal terms, visa and medical.The transfer was for an initial £12.85 million, with a two-year contract plus an optional year, and was confirmed on 31 August. Ronaldo was given the number 7 shirt after Edinson Cavani agreed to switch to 21.The first 24 hours of Ronaldo's shirt sales was reported to have broken the all-time record following a transfer, overtaking Messi after his move to Paris Saint-Germain.On 11 September, Ronaldo made his second debut at Old Trafford, scoring the opening two goals in a 4–1 league victory against Newcastle United.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Manchester_United_v_Newcastle_United%2C_11_September_2021_%2810%29.jpg/340px-Manchester_United_v_Newcastle_United%2C_11_September_2021_%2810%29.jpg" width="70%" height="50%">
 
-    <br><br>
+        <h2 id="Al Nassr">Al Nassr</h2>
+        <img src="">
+        <p>On 30 December 2022, Saudi club Al Nassr reached an agreement for Ronaldo to join the club effective 1 January 2023, signing a contract until 2025 As reported by Fabrizio Romano of The Guardian, Ronaldo received the highest football salary in history, worth €200 million per year;this included an annual guaranteed football salary of €90 million, with commercial and sponsorship deals included bringing his total annual salary to €200 million. He was also reportedly paid a signing-on bonus in the region of €100 million.On 19 January, Ronaldo played for the first time since transferring to Saudi Arabia, in an exhibition game featuring a combined team of Riyadh's Al Nassr and Al Hilal players against Paris Saint-Germain. Ronaldo scored twice in a 5–4 loss.</p>
 
-    <b class="main-text">
-        <strong>Born</strong>: 15 October 1931, Rameswaram<br><br>
-        <strong>Died</strong>: 27 July 2015, Shillong<br><br>
-        <strong>Full name</strong>: Avul Pakir Jainulabdeen Abdul Kalam<br><br>
-        <strong>Awards</strong>: Bharat Ratna, Padma Vibhushan, Padma Bhushan, Hoover Medal<br><br>
-        <strong>Education</strong>: Madras Institute of Technology (1955–1960)<br><br>
-    </b>
-
-    <hr>
-    <footer>Created by Anmol</footer>
-    <hr>
-
-    <script src="script.js"></script>
-</body>
+        <h2>Back to the top</h2>
+        <button><a href="#Cristiano Ronaldo">Click me!</a></button>
+    </body>
 </html>
